api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  api
  namespace: production
  labels:
    app:  api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  api
        version: v1
    spec:
      containers:
      - name:  api
        image:  yagneshjariwala/api
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8000
          name:  api
